--- a/src/styles/components/modal.less
+++ b/src/styles/components/modal.less
@@ -23,7 +23,19 @@
       pointer-events: none;
       padding-bottom: 24px;
       top: 100px;
-      max-width: calc(100vw - 32px);
+      width: 100%;
+      &.modal-fullscreen {
+        width: 100% !important;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        .modal-content {
+          width: 100%;
+          position: absolute;
+          top: 0;
+          bottom: 0;
+        }
+      }
       .modal-content {
         position: relative;
         background-color: #fff;
@@ -88,6 +100,12 @@
             background: #fff;
             border: 1px solid #d9d9d9;
             outline: none;
+            .icon-loading {
+              font-size: 12px;
+              color: #fff;
+              display: inline-flex;
+              animation: rotate 0.8s linear infinite;
+            }
             &.confirm {
               color: #fff;
               background: #1890ff;
@@ -95,6 +113,7 @@
               text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
               box-shadow: 0 2px 0 rgb(0 0 0 / 5%);
               margin-left: 8px;
+
               &:hover {
                 opacity: 0.8;
               }
@@ -115,16 +134,38 @@
     }
   }
 }
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .fade-enter-active , .fade-leave-active {
   transition: opacity 0.3s ease;
 }
 .fade-enter , .fade-leave-to {
   opacity: 0;
 }
-.zoomIn-enter-active , .zoomIn-leave-active {
+.scale-enter-active , .scale-leave-active {
   transition: all 0.3s ease;
 }
-.zoomIn-enter , .zoomIn-leave-to {
-  transform: scale(0.5);
+.scale-enter , .scale-leave-to {
+  transform: scale(0.1);
+  opacity: 0;
+}
+.slide-enter-active , .slide-leave-active {
+  transition: opacity 0.3s ease , transform 0.3s ease;
+}
+.slide-enter , .slide-leave-to {
+  opacity: 0;
+  transform: translateY(-30px);
+}
+.zoom-enter-active , .zoom-leave-active {
+  transition: all 0.3s ease;
+}
+.zoom-enter , .zoom-leave-to {
+  transform: scale(0.8);
   opacity: 0;
 }
