--- a/src/styles/components/modal.less
+++ b/src/styles/components/modal.less
@@ -74,6 +74,56 @@
           padding: 16px 24px;
           font-size: 14px;
           word-break: break-word;
+          .modal-type-icon {
+            font-size: 24px;
+            float: left;
+            position: relative;
+            top: -2px;
+          }
+          .modal-type-header {
+            overflow: hidden;
+            .modal-type-title {
+              font-size: 16px;
+              font-weight: 500;
+              margin-left: 40px;
+            }
+
+          }
+          .modal-type-content {
+            margin-left: 40px;
+            margin-top: 10px;
+            font-size: 14px;
+          }
+          button {
+            line-height: 1.5715;
+            position: relative;
+            display: inline-block;
+            font-weight: 400;
+            white-space: nowrap;
+            text-align: center;
+            background-image: none;
+            box-shadow: 0 2px 0 rgb(0 0 0 / 2%);
+            cursor: pointer;
+            transition: all .3s cubic-bezier(.645,.045,.355,1);
+            user-select: none;
+            touch-action: manipulation;
+            height: 32px;
+            padding: 4px 15px;
+            font-size: 14px;
+            border-radius: 2px;
+            color: rgba(0,0,0,.85);
+            background: #fff;
+            border: 1px solid #d9d9d9;
+            outline: none;
+          }
+          .modal-type-confirm-btn {
+            color: #fff;
+            background: #1890ff;
+            border-color: #1890ff;
+            text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+            box-shadow: 0 2px 0 rgb(0 0 0 / 5%);
+            margin-left: 8px;
+          }
         }
         .footer {
           padding: 10px 16px;
