--- a/src/styles/components/modal.less
+++ b/src/styles/components/modal.less
@@ -70,6 +70,9 @@
             line-height: 22px;
           }
         }
+        .content-info , .content-success , .content-erro , .content-warning {
+          padding: 32px 32px 24px !important;
+        }
         .content {
           padding: 16px 24px;
           font-size: 14px;
@@ -93,6 +96,10 @@
             margin-left: 40px;
             margin-top: 10px;
             font-size: 14px;
+          }
+          .modal-type-footer {
+            text-align: right;
+            margin-top: 20px;
           }
           button {
             line-height: 1.5715;
