--- a/example/assets/css/base.less
+++ b/example/assets/css/base.less
@@ -127,6 +127,7 @@ pre , code {
     border-radius: 5px;
     margin-bottom: 20px;
     box-sizing: border-box;
+    overflow: hidden;
   }
   .doc-title {
     font-size: 28px;
