--- a/src/styles/components/modal.less
+++ b/src/styles/components/modal.less
@@ -70,7 +70,7 @@
             line-height: 22px;
           }
         }
-        .content-info , .content-success , .content-erro , .content-warning {
+        .content-info , .content-success , .content-error , .content-warning {
           padding: 32px 32px 24px !important;
         }
         .content {
