--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,4 +1,4 @@
 @import './custom.less';
+@import './animate.less';
 @import './iconfont/iconfont.css';
 @import './components/index';
-@import './components/modal.less';
