--- a/src/styles/animate.less
+++ b/src/styles/animate.less
@@ -5,6 +5,7 @@
   opacity: 0;
 }
 
+// modal组件
 .scale-enter-active , .scale-leave-active {
   transition: all 0.3s ease;
 }
@@ -12,7 +13,6 @@
   transform: scale(0.1);
   opacity: 0;
 }
-
 .slide-enter-active , .slide-leave-active {
   transition: opacity 0.3s ease , transform 0.3s ease;
 }
@@ -20,7 +20,6 @@
   opacity: 0;
   transform: translateY(-30px);
 }
-
 .zoom-enter-active , .zoom-leave-active {
   transition: all 0.3s ease;
 }
@@ -29,9 +28,34 @@
   opacity: 0;
 }
 
+// drawer组件
 .right-enter-active , .right-leave-active {
-  transition: transform 0.3s cubic-bezier(.7,.3,.1,1);
+  transition: transform 0.3s cubic-bezier(.92,.01,.82,.99);
 }
 .right-enter , .right-leave-to {
   transform: translateX(100%);
+}
+.left-enter-active , .left-leave-active {
+  transition: transform 0.3s cubic-bezier(.92,.01,.82,.99);
+}
+.left-enter , .left-leave-to {
+  transform: translateX(-100%);
+}
+.drawer-fade-enter-active , .drawer-fade-leave-active {
+  transition: opacity 0.3s cubic-bezier(.92,.01,.82,.99);
+}
+.drawer-fade-enter , .drawer-fade-leave-to {
+  opacity: 0;
+}
+.top-enter-active , .top-leave-active {
+  transition: transform 0.3s cubic-bezier(.92,.01,.82,.99);
+}
+.top-enter , .top-leave-to {
+  transform: translateY(-100%);
+}
+.bottom-enter-active , .bottom-leave-active {
+  transition: transform 0.3s cubic-bezier(.92,.01,.82,.99);
+}
+.bottom-enter , .bottom-leave-to {
+  transform: translateY(100%);
 }
