--- a/src/styles/components/drawer.less
+++ b/src/styles/components/drawer.less
@@ -1,5 +1,31 @@
-
-
+.ca-drawer {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  &-mask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.45);
+    opacity: 0;
+    transition: opacity 0.3s cubic-bezier(.79,.01,.31,.99);
+  }
+}
+.ca-drawer-right {
+  .ca-drawer-content-wrap {
+    right: 0;
+  }
+}
+.ca-drawer-open {
+  .ca-drawer-mask {
+    opacity: 1;
+  }
+}
 // .ca-drawer {
 //   position: fixed;
 //   top: 0;
