--- a/src/styles/components/drawer.less
+++ b/src/styles/components/drawer.less
@@ -1,4 +1,38 @@
-
+.ca-drawer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  &.ca-drawer-right {
+    right: 0;
+    width: 0;
+    height: 100%;
+  }
+  &-mask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.45);
+  }
+  &.ca-drawer-open {
+    width: 100%;
+    .ca-drawer-mask {
+      animation: maskFadeIn 0.3s cubic-bezier(.73,0,.28,1);
+    }
+    @keyframes maskFadeIn {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
+  }
+}
 
 // .ca-drawer {
 //   position: fixed;
