--- a/src/styles/components/drawer.less
+++ b/src/styles/components/drawer.less
@@ -1,30 +1,26 @@
 .ca-drawer {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 0%;
-  height: 100%;
-  &>* {
-    transition: transform 0.3s cubic-bezier(0.7, 0.3, 0.1, 1), box-shadow 0.3s cubic-bezier(0.7, 0.3, 0.1, 1);
-  }
   z-index: 1000;
   &-mask {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 0;
     background-color: rgba(0,0,0,0.45);
+    transition: opacity 0.3s cubic-bezier(0.7, 0.3, 0.1, 1);
     opacity: 0;
-    transition: all 0.3s cubic-bezier(.73,0,.28,1);
   }
   &.ca-drawer-open {
     width: 100%;
+  }
+  &.ca-drawer-open {
     .ca-drawer-mask {
+      height: 100%;
       opacity: 1;
-      animation: maskFadeIn 0.3s cubic-bezier(.73,0,.28,1);
+      animation: fadeIn 0.3s cubic-bezier(0.7, 0.3, 0.1, 1);
     }
-    @keyframes maskFadeIn {
+    @keyframes fadeIn {
       0% {
         opacity: 0;
       }
@@ -35,69 +31,17 @@
   }
   .ca-drawer-content-wrap {
     position: absolute;
-    right: 0;
     height: 100%;
-    .ca-drawer-content {
-      width: 100%;
-      height: 100%;
-      background-color: #fff;
-    } 
+    background-color: #fff;
+    transition : transform 0.3s cubic-bezier(0.7, 0.3, 0.1, 1);
+  }
+};
+.ca-drawer-right {
+  top: 0;
+  width: 0%;
+  height: 100%;
+  right: 0;
+  .ca-drawer-content-wrap {
+    right: 0;
   }
 }
-
-
-
-
-
-
-// .ca-drawer {
-//   position: fixed;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
-//   z-index: 1000;
-//   & > * {
-//     transition: transform .3s cubic-bezier(.7,.3,.1,1),box-shadow .3s cubic-bezier(.7,.3,.1,1);
-//   }
-//   .ca-drawer-content-wrap {
-//     position: absolute;
-//     height: 100%;
-//     .ca-drawer-content {
-//       background-color: #fff;
-//       height: 100%;
-//       width: 100%;
-//     }
-//   }
-//   &.ca-drawer-right {
-//     right: 0;
-//     width: 0;
-//     height: 100%;
-//     .ca-drawer-content-wrap {
-//       box-shadow: -2px 0 8px rgb(0 0 0 / 15%);
-//       right: 0;
-//     }
-//   }
-//   &-mask {
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 100%;
-//     background-color: rgba(0,0,0,0.45);
-//   }
-//   &.ca-drawer-open {
-//     width: 100%;
-//     .ca-drawer-mask {
-//       animation: maskFadeIn 0.3s cubic-bezier(.73,0,.28,1);
-//     }
-//     @keyframes maskFadeIn {
-//       0% {
-//         opacity: 0;
-//       }
-//       100% {
-//         opacity: 1;
-//       }
-//     }
-//   }
-// }
