--- a/src/styles/components/drawer.less
+++ b/src/styles/components/drawer.less
@@ -31,9 +31,48 @@
   }
   .ca-drawer-content-wrap {
     position: absolute;
+    transition : transform 0.3s cubic-bezier(0.7, 0.3, 0.1, 1) , box-shadow 0.3s cubic-bezier(0.7, 0.3, 0.1, 1);
+  }
+  .ca-drawer-content {
+    width: 100%;
     height: 100%;
     background-color: #fff;
-    transition : transform 0.3s cubic-bezier(0.7, 0.3, 0.1, 1);
+    position: relative;
+    overflow: auto;
+    border: none;
+  }
+  .ca-drawer-wrap-body {
+    height: 100%;
+    width: 100%;
+  }
+  .ca-drawer-header {
+    position: relative;
+    padding: 16px 24px;
+    background-color: #fff;
+    border-bottom: 1px solid #e8e8e8;
+    .ca-drawer-title {
+      font-size: 16px;
+      font-weight: bold;
+      line-height: 22px;
+      word-break: break-all;
+      color: rgba(0,0,0,.85);
+      margin-right: 10px;
+    }
+    .ca-drawer-close {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 55px;
+      height: 55px;
+      text-align: center;
+      line-height: 55px;
+      margin-left: 5px;
+      cursor: pointer;
+    }
+  }
+  .ca-drawer-body {
+    padding: 24px;
+    background-color: #fff;
   }
 };
 .ca-drawer-right {
@@ -43,5 +82,71 @@
   right: 0;
   .ca-drawer-content-wrap {
     right: 0;
+    height :100%;
+  }
+  &.ca-drawer-open {
+    .ca-drawer-content-wrap {
+      box-shadow: -2px 0 8px rgba(0,0,0,0.15);
+    }
+  }
+};
+.ca-drawer-left {
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  .ca-drawer-content-wrap {
+    left: 0;
+    height: 100%;
+  }
+  &.ca-drawer-open {
+    .ca-drawer-content-wrap {
+      box-shadow: -2px 0 8px rgba(0,0,0,0.15);
+    }
+  }
+}
+.ca-drawer-open {
+  &.ca-drawer-left {
+    width: 100%;
+  }
+}
+.ca-drawer-top {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  .ca-drawer-content-wrap {
+    top: 0;
+    width: 100%;
+  }
+  &.ca-drawer-open {
+    .ca-drawer-content-wrap {
+      box-shadow: -2px 0 8px rgba(0,0,0,0.15);
+    }
+  }
+}
+.ca-drawer-bottom {
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  .ca-drawer-content-wrap {
+    bottom: 0;
+    width: 100%;
+  }
+  &.ca-drawer-open {
+    .ca-drawer-content-wrap {
+      box-shadow: -2px 0 8px rgba(0,0,0,0.15);
+    }
+  }
+}
+.ca-drawer-open {
+  &.ca-drawer-top {
+    height: 100%;
+  }
+}
+.ca-drawer-open {
+  &.ca-drawer-bottom {
+    height: 100%;
   }
 }
