--- a/src/styles/components/drawer.less
+++ b/src/styles/components/drawer.less
@@ -85,6 +85,7 @@
     height :100%;
   }
   &.ca-drawer-open {
+    transition: transform 0.3s cubic-bezier(0.7, 0.3, 0.1, 1);
     .ca-drawer-content-wrap {
       box-shadow: -2px 0 8px rgba(0,0,0,0.15);
     }
