--- a/src/styles/components/drawer.less
+++ b/src/styles/components/drawer.less
@@ -70,6 +70,19 @@
       cursor: pointer;
     }
   }
+  .ca-drawer-no-title-header {
+    .ca-drawer-close {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 55px;
+      height: 55px;
+      text-align: center;
+      line-height: 55px;
+      margin-left: 5px;
+      cursor: pointer;
+    }
+  }
   .ca-drawer-body {
     padding: 24px;
     background-color: #fff;
