--- a/src/styles/animate.less
+++ b/src/styles/animate.less
@@ -59,3 +59,12 @@
 .bottom-enter , .bottom-leave-to {
   transform: translateY(100%);
 }
+
+// popconfirm组件
+.zoomIn-enter-active , .zoomIn-leave-active {
+  transition: opacity 0.3s cubic-bezier(0.08, 0.82, 0.17, 1) , transform 0.3s cubic-bezier(0.08, 0.82, 0.17, 1);
+}
+.zoomIn-enter , .zoomIn-leave-to {
+  opacity: 0;
+  transform: scale(0.1);
+}
