--- a/src/styles/components/loading.less
+++ b/src/styles/components/loading.less
@@ -1,33 +1,83 @@
 .ca-loading {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50% , -50%);
-  &-circle {
+  font-size: 14px;
+  opacity: 0;
+  line-height: 1.5;
+  text-align: center;
+  box-sizing: border-box;
+  vertical-align: middle;
+  &-ing {
     display: inline-block;
-    height: 100%;
+    opacity: 1;
+    position: static;
+  }
+  &-content {
+    display: inline-block;
+    &.ca-loading-default {
+      width: 24px;
+      height: 24px;
+    }
+    &.ca-loading-small {
+      width: 20px;
+      height: 20px;
+    }
+    &.ca-loading-large {
+      width: 28px;
+      height: 28px;
+    }
+  }
+  &-icon {
+    display: inline-block;
     width: 100%;
-    border: 3px solid rgba(150, 150, 150, 0);
+    height: 100%;
+    border: 2px solid rgba(150, 150, 150, 0);
     border-radius: 50%;
     border-top-color: #0057e7;
-    animation: rotate 1s 0s infinite linear normal;
+    border-left-color: #0057e7;
+    animation: rotate 1s infinite linear normal;
   }
   @keyframes rotate {
     0%   { transform: rotate(0);      }
     100% { transform: rotate(360deg); }
   }
-  &-wrap {
+  &-text {
     position: relative;
-    display: inline-block;
-  }
-  &-inner {
-    width: 30px;
-    height: 30px;
-    margin: 0 auto;
+    transition: opacity 0.3s;
   }
   &-blur {
+    opacity: 0.5;
     clear: both;
     overflow: hidden;
-    opacity: .5;
+  }
+  &-wrap {
+    position: relative;
+    .ca-loading {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 4;
+      display: block;
+      width: 100%;
+      height: 100%;
+      max-height: 400px;
+      &.ca-loading-show-text {
+        .ca-loading-content {
+          margin-top: -22px;
+        } 
+      }
+    }
+    .ca-loading-content {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin: -12px;
+    }
+    .ca-loading-tip {
+      position: absolute;
+      top: 50%;
+      width: 100%;
+      padding-top: 5px;
+      color: #0057e7;
+    }
   }
 }
