--- a/src/styles/components/badge.less
+++ b/src/styles/components/badge.less
@@ -20,6 +20,7 @@
     border-radius: 10px;
     box-shadow: 0 0 0 1px #fff;
     transform: translate(50% , -50%);
+    transform-origin: 100% 0;
     overflow: hidden;
     &-box {
       display: inline-block;
@@ -27,7 +28,63 @@
       transition: all .3s cubic-bezier(.645,.045,.355,1);
     }
     &-symbol {
-      
+      vertical-align: top;
+    }
+  }
+  &-dot {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    transform: translate(50% , -50%);
+    transform-origin: 100% 0;
+    width: 6px;
+    height: 6px;
+    background-color: #f5222d;
+    border-radius: 50%;
+  }
+  .badge-zoom-enter-active , .badge-zoom-leave-active {
+    transition: all 0.3s cubic-bezier(.71,0,.29,.99);
+  }
+  .badge-zoom-enter , .badge-zoom-leave-to {
+    transform: scale(0) translate(50% , -50%);
+    opacity: 0;
+  }
+  .badge-zoom-enter-to {
+    transform: scale(1.2) translate(50% , -50%);
+  }
+  &-status-success {
+    background-color: #19be6b;
+  }
+  &-status-error {
+    background-color: #ed4014;
+  }
+  &-status-warning {
+    background-color: #ff9900;
+  }
+  &-status-default {
+    background-color: #d8d8d8;
+  }
+  &-status-processing {
+    background-color: #2d8cf0;
+    &:after {
+      content : '';
+      position: absolute;
+      top: -1px;
+      left: -1px;
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      border: 1px solid #2d8cf0;
+      animation : status 1.2s ease-in-out infinite;
+    }
+    @keyframes status {
+      0% {
+        transform: scale(0.5);
+      }
+      100% {
+        transform: scale(1);
+      }
     }
   }
 }
