--- a/src/styles/components/collapse.less
+++ b/src/styles/components/collapse.less
@@ -38,10 +38,10 @@
       padding: 16px;
     }
   }
-  .collapse-slide-enter-active , .collapse-slide-leave-active {
-    transition: all 0.3s ease;
-  }
-  .collapse-slide-enter , .collapse-slide-leave-to {
+  // .collapse-slide-enter-active , .collapse-slide-leave-active {
+  //   transition: all 0.3s ease;
+  // }
+  // .collapse-slide-enter , .collapse-slide-leave-to {
     
-  }
+  // }
 }
