--- a/src/styles/components/collapse.less
+++ b/src/styles/components/collapse.less
@@ -12,6 +12,10 @@
     position: relative;
     color: #333;
     cursor: pointer;
+    &-disabled {
+      color: rgba(0,0,0,.25);
+      cursor: not-allowed;
+    }
   }
   &-item {
     border-bottom: 1px solid #d8d8d8;
@@ -23,7 +27,7 @@
     transform: translateY(-50%);
     left: 16px;
     line-height: 1;
-    transition: transform 0.3s ease;
+    transition: transform 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
     transform-origin: center center;
     &.active {
       transform: translateY(-50%) rotate(90deg);
@@ -38,7 +42,7 @@
       padding: 16px;
     }
   }
-  .collapse-slide-enter-active , .collapse-slide-leave-active {
-    transition: height 0.2s ease , opacity 0.2s ease;
+  .collapse-transition {
+    transition: height 0.2s cubic-bezier(0.645, 0.045, 0.355, 1) , opacity 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
   }
 }
