--- a/src/styles/components/collapse.less
+++ b/src/styles/components/collapse.less
@@ -12,6 +12,9 @@
     position: relative;
     color: #333;
     cursor: pointer;
+    &.ca-collapse-no-arrow {
+      padding: 12px 16px;
+    }
     &-disabled {
       color: rgba(0,0,0,.25);
       cursor: not-allowed;
@@ -19,6 +22,15 @@
   }
   &-item {
     border-bottom: 1px solid #d8d8d8;
+  }
+  &-right {
+    .ca-collapse-arrow {
+      left: auto;
+      right: 16px;
+    }
+    .ca-collapse-header {
+      padding: 12px 40px 12px 16px;
+    }
   }
   &-arrow {
     position: absolute;
@@ -33,6 +45,10 @@
       transform: translateY(-50%) rotate(90deg);
     }
   }
+  &-extra {
+    float: right;
+    line-height: 1;
+  }
   &-content {
     color: rgba(0,0,0,0.65);
     overflow: hidden;
@@ -40,6 +56,13 @@
     border-top: 1px solid #d8d8d8;
     &-inner {
       padding: 16px;
+    }
+  }
+  &-no-border {
+    border: none;
+    .ca-collapse-content {
+      border-top: none;
+      background-color: transparent;
     }
   }
   .collapse-transition {
