--- a/src/styles/components/list.less
+++ b/src/styles/components/list.less
@@ -12,6 +12,10 @@
     align-items: center;
     justify-content: space-between;
     padding: 12px 0;
+    &-main {
+      flex: 1;
+      display: flex;
+    }
     &-meta {
       display: flex;
       flex: 1;
@@ -38,6 +42,123 @@
   &-split {
     .ca-list-item {
       border-bottom: 1px solid #d8d8d8;
+      &:last-child {
+        border-bottom: none;
+      }
+    }
+    .ca-list-header {
+      border-bottom: 1px solid #d8d8d8;
+    }
+  }
+  &-need-last-item-border-bottom {
+    .ca-list-item:last-child {
+      border-bottom: 1px solid #d8d8d8;
+    }
+  }
+  &-default {
+    .ca-list-header {
+      padding: 12px 0;
+    }
+    .ca-list-footer {
+      padding: 12px 0;
+    }
+  }
+  &-small {
+    .ca-list-header {
+      padding: 8px 0;
+    }
+    .ca-list-footer {
+      padding: 8px 0;
+    }
+  }
+  &-large {
+    .ca-list-header {
+      padding: 16px 0;
+    }
+    .ca-list-footer {
+      padding: 16px 0;
+    }
+  }
+  &-default.ca-list-border {
+    .ca-list-header {
+      padding: 12px 24px;
+    }
+    .ca-list-footer {
+      padding: 12px 24px;
+    }
+    .ca-list-item {
+      padding-left: 24px;
+      padding-right: 24px;
+    }
+  }
+  
+  &-small.ca-list-border {
+    .ca-list-header {
+      padding: 8px 16px;
+    }
+    .ca-list-footer {
+      padding: 8px 16px;
+    }
+    .ca-list-item {
+      padding-left: 16px;
+      padding-right: 16px;
+    }
+  }
+  
+  &-large.ca-list-border {
+    .ca-list-header {
+      padding: 16px 24px;
+    }
+    .ca-list-footer {
+      padding: 16px 24px;
+    }
+    .ca-list-item {
+      padding-left: 24px;
+      padding-right: 24px;
+    }
+  }
+  &-border {
+    &.ca-list-default {
+      .ca-list-header {
+        padding-left: 24px;
+        padding-right: 24px;
+      }
+      .ca-list-item {
+        padding-left: 24px;
+        padding-right: 24px;
+      }
+      .ca-list-footer {
+        padding-left: 24px;
+        padding-right: 24px;
+      }
+    }
+    &.ca-list-small {
+      .ca-list-header {
+        padding-left: 12px;
+        padding-right: 12px;
+      }
+      .ca-list-footer {
+        padding-left: 12px;
+        padding-right: 12px;
+      }
+      .ca-list-item {
+        padding-left: 12px;
+        padding-right: 12px;
+      }
+    }
+    &.ca-list-large {
+      .ca-list-header {
+        padding-top: 16px;
+        padding-bottom: 16px;
+      }
+      .ca-list-footer {
+        padding-top: 16px;
+        padding-bottom: 16px;
+      }
+      .ca-list-item {
+        padding-top: 16px;
+        padding-bottom: 16px;
+      }
     }
   }
 }
