--- a/src/styles/animate.less
+++ b/src/styles/animate.less
@@ -60,11 +60,11 @@
   transform: translateY(100%);
 }
 
-// popconfirm组件
+// popconfirm组件，popover组件
 .zoomIn-enter-active , .zoomIn-leave-active {
   transition: opacity 0.3s cubic-bezier(0.08, 0.82, 0.17, 1) , transform 0.3s cubic-bezier(0.08, 0.82, 0.17, 1);
 }
 .zoomIn-enter , .zoomIn-leave-to {
   opacity: 0;
-  transform: scale(0.5);
+  transform: scale(0.8);
 }
