--- a/src/styles/components/popover.less
+++ b/src/styles/components/popover.less
@@ -21,7 +21,7 @@
     background-clip: padding-box;
     box-shadow: 0 2px 8px rgb(0 0 0 / 15%);
     &-content {
-      color: #000;
+      line-height: 1.5;
     }
   }
   &-title {
