--- a/src/styles/components/card.less
+++ b/src/styles/components/card.less
@@ -94,6 +94,16 @@
     &-description {
       color: rgba(0,0,0,0.45);
     }
+    &-wrap {
+      display: flex;
+      align-items: flex-start;
+    }
+    &-avatar {
+      margin-right: 12px;
+    }
+    &-inner {
+      flex: 1;
+    }
   }
   &-actions {
     border-top: 1px solid #e8e8e8;
