--- a/src/styles/components/statistic.less
+++ b/src/styles/components/statistic.less
@@ -18,4 +18,13 @@
   &-value-precision {
     font-size: 16px;
   }
+  &-suffix {
+    margin-left: 4px;
+    display: inline-block;
+    font-size: 16px;
+  }
+  &-prefix {
+    margin-right: 4px;
+    display: inline-block;
+  }
 }
