--- a/src/styles/components/tabs.less
+++ b/src/styles/components/tabs.less
@@ -29,6 +29,7 @@
     position: relative;
     display: inline-block;
     box-sizing: border-box;
+    transition: transform 0.3s;
   }
   &-tab {
     display: inline-block;
@@ -55,6 +56,7 @@
     opacity: 0;
     height: 100%;
     cursor: pointer;
+    transition: all 0.3s;
   }
   &-tab-prev {
     left: 0;
