--- a/src/styles/components/tabs.less
+++ b/src/styles/components/tabs.less
@@ -93,6 +93,6 @@
     background-color: #1890ff;
     left: 0;
     z-index: 1;
-    transition: transform 0.3s;
+    transition: transform 0.3s , width 0.3s;
   }
 }
