--- a/src/styles/components/tabs.less
+++ b/src/styles/components/tabs.less
@@ -89,10 +89,29 @@
     position: absolute;
     height: 2px;
     bottom: 0;
-    width: 100%;
+    width: 0px;
     background-color: #1890ff;
     left: 0;
     z-index: 1;
     transition: transform 0.3s , width 0.3s;
+  }
+  &-content {
+    width: 100%;
+    transition: opacity 0.3s;
+    &.ca-tabs-content-animate {
+      display: flex;
+      transition: transform 0.3s;
+    }
+  }
+  &-tabpane {
+    width: 100%;
+    flex-shrink: 0;
+    opacity: 1;
+    transition: opacity 0.3s;
+    &.ca-tabs-inactive-tabpane {
+      height: 0;
+      opacity: 0;
+      overflow: hidden;
+    }
   }
 }
