--- a/src/styles/components/tabs.less
+++ b/src/styles/components/tabs.less
@@ -46,6 +46,10 @@
       color: #1890ff;
       font-weight: 500;
     }
+    &-disabled {
+      color: rgba(0,0,0,0.45);
+      cursor: not-allowed;
+    }
   }
   &-tab-prev , &-tab-next {
     position: absolute;
