--- a/src/styles/components/tabs.less
+++ b/src/styles/components/tabs.less
@@ -2,6 +2,7 @@
   color: rgba(0,0,0,0.65);
   font-size: 14px;
   box-sizing: border-box;
+  overflow: hidden;
   &-bar {
     margin-bottom: 16px;
     border-bottom: 1px solid #e8e8e8;
@@ -16,6 +17,42 @@
       &-scrolling {
         padding: 0 32px;
       }
+    }
+    &-left {
+      float: left;
+      height: 100%;
+      margin-bottom: 0;
+      border: none;
+      border-right: 1px solid #e8e8e8;
+      .ca-tabs-tab {
+        display: block;
+        margin-right: 0;
+        margin-bottom: 16px;
+      }
+      .ca-tabs-tab-line {
+        width: 2px;
+        left: auto;
+        right: 0;
+        top: 0;
+      }
+      .ca-tabs-tab-line-animate {
+        transition: transform 0.3s
+      }
+    }
+  }
+  &-content {
+    width: 100%;
+    &-top , &-bottom {
+      transition: opacity 0.3s;
+      &.ca-tabs-content-animate {
+        display: flex;
+        transition: transform 0.3s;
+      }
+    }
+    &-left {
+      width: auto;
+      overflow: hidden;
+      padding-left: 16px;
     }
   }
   &-nav-tab {
@@ -101,14 +138,7 @@
       transition: transform 0.3s , width 0.3s;
     }
   }
-  &-content {
-    width: 100%;
-    transition: opacity 0.3s;
-    &.ca-tabs-content-animate {
-      display: flex;
-      transition: transform 0.3s;
-    }
-  }
+  
   &-tabpane {
     width: 100%;
     flex-shrink: 0;
